--- a/in-traffic.html
+++ b/in-traffic.html
@@ -63,7 +63,7 @@
 						<br>
 						<div class="row">
 							<div class="span6 text-center">
-								<img src="images/land-img-1.png">
+								<img src="images/Intraffic.png">
 							</div>
 						</div>
 					</div>
@@ -74,7 +74,6 @@
 							<li ><a href="#tab2" data-toggle="tab">Documentaci&oacute;n API</a></li>
 							<img class="tab-divider" src="images/tab-divider.png">
 							<li ><a href="#tab3" data-toggle="tab">Contacto</a></li>
-							<img class="tab-divider" src="images/tab-divider.png">
 						</ul>
 						<div class="tab-content">
 							<div class="tab-pane active" id="tab1">
