--- a/its.html
+++ b/its.html
@@ -63,7 +63,7 @@
 						<br>
 						<div class="row">
 							<div class="span6 text-center">
-								<img src="images/ITS.png">
+								<img src="images/Its.png">
 							</div>
 						</div>
 					</div>
