--- a/sinapsis.html
+++ b/sinapsis.html
@@ -41,7 +41,7 @@
 					<div class="span4">
 						<h1 style="text-align:center;">Sinapsis</h1>
 						<br>
-						<img class="subview-image" src="images/Sinapsis.png">
+						<img class="subview-image" src="images/sinapsis.png">
 					</div>
 					<div class="span8 description">
 						<ul class="nav nav-tabs">
