--- a/casos-exito.html
+++ b/casos-exito.html
@@ -63,7 +63,7 @@
 						<br>
 						<div class="row">
 							<div class="span6 text-center">
-								<img class="subview-image" src="images/Proyectos.png">
+								<img class="subview-image" src="images/proyectos.png">
 							</div>
 						</div>
 					</div>
