--- a/vikua.html
+++ b/vikua.html
@@ -147,11 +147,54 @@
 							<div class="tab-pane" id="tab5">
 								<p class="tab-text-2">
 									<span>Junta directiva</span><br><br>
-									Marcelo Ricigliano <b>Director General</b><br><br>
-									Andr&eacute;s de Jongh <b>Director de Administraci&oacute;n Finanzas</b><br><br>
-									Diana Carolina Montero <b>Directora de Mercadeo y Comunicaciones</b><br><br>
-									Juan Jos&eacute; Pocaterra <b>Director de Negocios</b><br><br>
-									Rafael Santelmo <b>Director de InTraffic</b><br><br>
+									<b>Marcelo E. Ricigliano Cantos Director General</b><br><br>
+
+									Abogado egresado de la Universidad Católica Andrés Bello.  Obtuvo el título de LL.M y especialista en Arbitraje Comercial Internacional otorgado por la Unversidad de Estocolmo, en Suecia. <br><br>
+
+									Representó a la UCAB en la Competencia de Arbitraje Comercial “Willem C. Vis Moot Court” en Viena, Austria. Profesor invitado en las cátedras de Derecho Internacional Privado en la UCAB y UCV. Durante 4 años se desempeñó como abogado en el área del Derecho Público y Arbitraje en la firma Grau, García, Hernández y Mónaco.<br><br>
+
+									Ha escrito para revistas jurídicas en Venezuela y Latinoamérica, especialmente sobre temas vinculados al Arbitraje. Presta asesorías externas en las actividades académicas que desarrolla el Centro de Arbitraje de la Cámara de Comercio de Caracas.<br><br>
+
+									Actualmente se desempeña como Director General de ViKua.<br><br>
+
+									<b>Andr&eacute;s de Jongh Director de Administraci&oacute;n Finanzas</b><br><br>
+
+									Economista Empresarial de la Universidad Metropolitana, parte de la Lista de Honor en 2007. Obtuvo el título de Magister en Administración de Empresas, del  Instituto de Estudios Superiores de Administración, en Caracas, en el año 2013.<br><br>
+
+									Participó activamente como miembro del equipo de Modelos de Naciones Unidas de la Universidad, llegando ser Asesor Académico de la agrupación en el período 2007 – 2009. Durante ese período obtuvo numerosos galardones individuales y grupales.<br><br>
+
+									Inició trayectoria profesional en el Banco Canarias, como Líder de Planificación Local, en la Vicepresidencia Ejecutiva de Planificación Estratégica. A los 22 años decide emprender, fundando BPDJ, compañía dedicada al desarrollo de capital humano en liderazgo, negociación, y oratoria.<br><br>
+
+									Actualmente se desempeña como Director de Administración y Finanzas de ViKua.<br><br>
+
+									<b>Diana Carolina Montero Directora de Mercadeo y Comunicaciones</b><br><br>
+
+									Comunicadora Social de la UCAB, Máster en Gerencia de Mercadeo de la EOI-Madrid, Diplomada en Gerencia de Gobiernos Locales de la UMA y el ILDIS y Diplomada en Gerencia Financiera por la Unimet.<br><br>
+
+									Obtuvo experiencia laboral en Nestlé, en la Corporación Andina de Fomento (CAF) y en Revlon, donde asumió cargos de Marketing y Trade Maketing para Venezuela, LATAM y el Caribe. En 2009 fundó Innova – Círculo Creativo y Grupo InTech Solutions (hoy ViKua).<br><br>
+
+									Profesora de la Escuela de Comunicación Social de la UCAB. Asesoró la Comisión de Seguridad Ciudadana del Cabildo Metropolitano y coordinó el Observatorio Metropolitano de Seguridad Ciudadana. Actualmente es Directora de la Asociación de Jóvenes Empresarios y embajadora de Ellas² (comunidad de emprendedoras en tecnología).<br><br>
+
+									Actualmente se desempeña como Directora de Marketing y Comunicaciones de ViKua.<br><br>
+
+									<b>Juan Jos&eacute; Pocaterra Director de Negocios</b><br><br>
+
+									Economista y Abogado, egresado de la Universidad Metropolitana entre los primeros 5 de su cohorte. Fue miembro activo de la comunidad universitaria en diversas actividades extracurriculares, particularmente en su participación como asesor académico. Comenzó su carrera en Motorola de Venezuela, para luego liderar el área de Planificación Estratégica Internacional del Banco Canarias.<br><br>
+
+									A los 21 años se inicia como emprendedor con la comercializadora Corporación Tango y una empresa de formación de capital humano, en las áreas de negociación, liderazgo y oratoria, conocida bajo la marca BPDJ.<br><br>
+
+									Actualmente se desempeña como Director de Negocios en ViKua, encargado de desarrollar las unidades de negocio de la organización, abrir nuevas oportunidades y desarrollar alianzas estratégicas, nacionales e internacionales, de la organización.<br><br>
+
+									<b>Rafael Santelmo Director de InTraffic</b><br><br>
+
+									Egresado de la Escuela de Ingeniería Electrónica de la Universidad Simón Bolívar, con mención Cum Laude, en el año 2008.<br><br>
+
+									Presentó como tesis de grado el desarrollo de un software para realizar conteo vehicular automatizado y en tiempo real, basado en el análisis de imágenes. Una vez graduado, consiguió financiamiento para ejecutar  y liderar un proyecto de dos años en Investigación y Desarrollo de Tecnologías para el Tráfico Vehicular. En el año 2009 fundó la compañía Tec-Intraf C.A., para dar continuidad a la preparación que ya tenía en la materia.<br><br>
+
+									Cursó un diplomado de Desarrollo Gerencial y Liderazgo Responsable en la Universidad Simón Bolívar.<br><br>
+
+									Actualmente es Director de InTraffic en ViKua.
+
 								</p>
 								<!-- <img class="description-img" src="images/who-img-1.png">
 								<img class="description-img" src="images/who-img-2.png">
