--- a/casos-exito.html
+++ b/casos-exito.html
@@ -11,7 +11,7 @@
 			<div class="container-stretcher">
 				<header>
 					<div class="row">
-						<div class="span2">
+						<div class="span3">
 							<a href="index.html">
 								<img src="images/logo.png">
 							</a>
@@ -38,7 +38,7 @@
 					</div>
 				</header>
 				<div class="row">
-					<div class="span6">
+					<div class="span5">
 						<!-- <div class="row small-text">
 							<div class="span2 text-center">
 								<img src="images/tv.png">
@@ -59,19 +59,17 @@
 								</p>
 							</div>
 						</div> -->
-						<h1 style="text-align:center;">Casos de &eacute;xito</h1>
-						<br>
 						<div class="row">
 							<div class="span6 text-center">
 								<img class="subview-image" src="images/proyectos.png">
 							</div>
 						</div>
 					</div>
-					<div class="span6">
+					<div class="span7">
 						<ul class="nav nav-tabs">
-							<li class="active"><a href="#tab1" data-toggle="tab" id="sinapsis-a-1">Tec-Intraf</a></li>
+							<li class="active" style="width: 260px;text-align:center;"><a href="#tab1" data-toggle="tab" id="sinapsis-a-1" style="margin:auto;text-align:center;">Tec-Intraf</a></li>
 							<img class="tab-divider" src="images/tab-divider.png">
-							<li ><a href="#tab2" data-toggle="tab" id="sinapsis-a-2">Sinapsis</a></li>
+							<li style="width: 260px;text-align:center;"><a href="#tab2" data-toggle="tab" id="sinapsis-a-2" style="margin:auto;text-align:center;">Sinapsis</a></li>
 						</ul>
 						<div class="tab-content">
 							<div class="tab-pane active" id="tab1">
