--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title>. : : Vikua : : .</title>
+		<title>Vikua</title>
 		<link href="css/bootstrap.css" rel="stylesheet" media="screen">
 		<link rel="stylesheet" href="css/style.css">
 		<script type="text/javascript" src="js/swfobject.js"></script>
@@ -14,7 +14,7 @@
 		<div class="container">
 			<header>
 				<div class="row">
-					<div class="span2">
+					<div class="span3">
 						<a href="index.html">
 							<img src="images/logo.png">
 						</a>
