--- a/sinapsis.html
+++ b/sinapsis.html
@@ -11,7 +11,7 @@
 			<div class="container-stretcher"> 
 				<header>
 					<div class="row">
-						<div class="span2">
+						<div class="span3">
 							<a href="index.html">
 								<img src="images/logo.png">
 							</a>
@@ -39,9 +39,10 @@
 				</header>
 				<div class="row">
 					<div class="span4">
-						<h1 style="text-align:center;">Sinapsis</h1>
+						<br>
 						<br>
 						<img class="subview-image" src="images/sinapsis.png">
+
 					</div>
 					<div class="span8 description">
 						<ul class="nav nav-tabs">
@@ -51,11 +52,11 @@
 							<img class="tab-divider" src="images/tab-divider.png">
 							<li><a href="#tab2" data-toggle="tab" id="sinapsis-3">Control de acceso</a></li>
 							<img class="tab-divider" src="images/tab-divider.png">
-							<li><a href="#tab3" data-toggle="tab" id="sinapsis-4">Gesti&oacute;n y protecci&oacute;n de activos m&oacute;viles</a></li>
+							<li><a href="#tab3" data-toggle="tab" id="sinapsis-4">Protecci&oacute;n de activos m&oacute;viles</a></li>
 							<img class="tab-divider" src="images/tab-divider.png">
 							<li><a href="#tab4" data-toggle="tab" id="sinapsis-5">Software y anal&iacute;ticas</a></li>
 							<img class="tab-divider" src="images/tab-divider.png">
-							<li><a href="#tab5" data-toggle="tab" id="sinapsis-6">Centros de control de operaciones</a></li>
+							<li><a href="#tab5" data-toggle="tab" id="sinapsis-6">Centros de control</a></li>
 							<!-- <img class="tab-divider" src="images/tab-divider.png">
 							<li><a href="#tab4" data-toggle="tab" id="sinapsis-7">Protecci&oacute;n de carga</a></li>
 							<img class="tab-divider" src="images/tab-divider.png">
