--- a/its.html
+++ b/its.html
@@ -11,7 +11,7 @@
 			<div class="container-stretcher">
 				<header>
 					<div class="row">
-						<div class="span2">
+						<div class="span3">
 							<a href="index.html">
 								<img src="images/logo.png">
 							</a>
@@ -38,7 +38,7 @@
 					</div>
 				</header>
 				<div class="row">
-					<div class="span6">
+					<div class="span5 text-center">
 						<!-- <div class="row small-text">
 							<div class="span2 text-center">
 								<img src="images/tv.png">
@@ -59,22 +59,16 @@
 								</p>
 							</div>
 						</div> -->
-						<h1 style="text-align:center;">ITS</h1>
-						<br>
-						<div class="row">
-							<div class="span6 text-center">
-								<img src="images/its.png">
-							</div>
-						</div>
+						<img src="images/its.png" style="margin-top: -30px;">
+						<img src="images/logo-its.png" style="margin-top: -100px;">
 					</div>
-					<div class="span6">
+					<div class="span7">
 						<ul class="nav nav-tabs">
-							<li class="active"><a href="#tab1" data-toggle="tab">Definici&oacute;n</a></li>
+							<li class="active" style="width: 175px;text-align:center;"><a href="#tab1" data-toggle="tab" style="margin:auto;text-align:center;">Definici&oacute;n</a></li>
 							<img class="tab-divider" src="images/tab-divider.png">
-							<li ><a href="#tab2" data-toggle="tab">ITS Venezuela</a></li>
+							<li style="width: 175px;"><a href="#tab2" data-toggle="tab" style="margin:auto;text-align:center;">ITS Venezuela</a></li>
 							<img class="tab-divider" src="images/tab-divider.png">
-							<li ><a href="#tab3" data-toggle="tab">ITS Latinoam&eacute;rica</a></li>
-							<img class="tab-divider" src="images/tab-divider.png">
+							<li style="width: 175px;"><a href="#tab3" data-toggle="tab" style="margin:auto;text-align:center;">ITS Latinoam&eacute;rica</a></li>
 						</ul>
 						<div class="tab-content">
 							<div class="tab-pane active" id="tab1">
