Visual minor changes.

--- a/index.html
+++ b/index.html
@@ -62,55 +62,56 @@
 				<img class="footer-border" src="images/footer-border.png">
 				<a href="vikua.html">
 					<div class="btn-footer">
-						<img src="images/btn-off-1.png">
+						<img src="images/btn-off-1.png" onmouseover='this.src="images/btn-on-1.png"' onmouseout='this.src="images/btn-off-1.png"' >
+
 					</div>
 				</a>
 				<img src="images/footer-divider.png">
 				<a href="#">
 					<div class="btn-footer">
-						<img src="images/btn-off-2.png">
+						<img src="images/btn-off-2.png" onmouseover='this.src="images/btn-on-2.png"' onmouseout='this.src="images/btn-off-2.png"'>
 					</div>
 				</a>
 				<img src="images/footer-divider.png">
 				<a href="casos-exito.html">
 					<div class="btn-footer">
-						<img src="images/btn-off-3.png">
+						<img src="images/btn-off-3.png" onmouseover='this.src="images/btn-on-3.png"' onmouseout='this.src="images/btn-off-3.png"'>
 					</div>
 				</a>
 				<img src="images/footer-divider.png">
 				<a href="tec-intraf.html">
 					<div class="btn-footer">
-						<img src="images/btn-off-4.png">
+						<img src="images/btn-off-4.png" onmouseover='this.src="images/btn-on-4.png"' onmouseout='this.src="images/btn-off-4.png"'>
 					</div>
 				</a>
 				<img src="images/footer-divider.png">
 				<a href="in-traffic.html">
 					<div class="btn-footer">
-						<img src="images/btn-off-5.png">
+						<img src="images/btn-off-5.png" onmouseover='this.src="images/btn-on-5.png"' onmouseout='this.src="images/btn-off-5.png"'>
 					</div>
 				</a>
 				<img src="images/footer-divider.png">
 				<a href="sinapsis.html">
 					<div class="btn-footer">
-						<img src="images/btn-off-6.png">
+						<img src="images/btn-off-6.png" onmouseover='this.src="images/btn-on-6.png"' onmouseout='this.src="images/btn-off-6.png"'>
 					</div>
 				</a>
 				<img src="images/footer-divider.png">
 				<a href="#">
 					<div class="btn-footer">
-						<img src="images/btn-off-7.png">
+						<img src="images/btn-off-7.png" onmouseover='this.src="images/btn-on-7.png"' onmouseout='this.src="images/btn-off-7.png"'>
 					</div>
 				</a>
 				<img src="images/footer-divider.png">
 				<a href="#">
 					<div class="btn-footer">
-						<img src="images/btn-off-8.png">
+						<img src="images/btn-off-8.png" onmouseover='this.src="images/btn-on-8.png"' onmouseout='this.src="images/btn-off-8.png"'>
 					</div>
 				</a>
 				<img src="images/footer-divider.png">
 				<a href="its.html">
 					<div class="btn-footer">
-						<img src="images/btn-off-9.png">
+						<img src="images/btn-off-9.png" onmouseover='this.src="images/btn-on-9.png"' onmouseout='this.src="images/btn-off-9.png"'>
 					</div>
 				</a>
 			</div>
